--- a/userservice/src/main/resources/application.properties
+++ b/userservice/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=userservice
+eureka.instance.hostname=localhost
+server.port=8080
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
